04-develop-ui-k8s/frontends/work-and-pension/workandpensionsdepartment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: workandpensionsdepartment-frontend-deployment
  labels:
    app: workandpensionsdepartment-frontend
spec:
  selector:
    matchLabels:
      app: workandpensionsdepartment-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: workandpensionsdepartment-frontend
        version: v1
    spec:
      containers:
        - name: workandpensionsdepartment-frontend
          image: "fra.ocir.io/frsxwtjslf35/demo/workandpensionsdepartment-frontend:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ocirsecret
---
kind: Service
apiVersion: v1
metadata:
  name: workandpensionsdepartment-frontend-service
spec:
  type: ClusterIP
  selector:
    app: workandpensionsdepartment-frontend
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workandpensionsdepartment-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "work.blockchain.ivandelic.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: workandpensionsdepartment-frontend-service
                port:
                  number: 3000
